removed ads, added error handling to Camera.open(), fixed some warnings.